apps/index-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index-frontend
  template:
    metadata:
      labels:
        app: index-frontend
    spec:
      containers:
        - name: index-frontend
          image: ghcr.io/kstacks-org/index-frontend:main-372d288
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          # Nitro servers usually respond with 200 on the root path
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
