apps/index-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: index-frontend-service
spec:
  selector:
    app: index-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
