apps/index-frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: index-frontend-route
  namespace: default
spec:
  parentRefs:
    - name: kstacks-gateway
  hostnames:
    - "index.kstacks.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: index-frontend-service
          port: 80
